<resources>
    <string name="app_name">Favorite Movie</string>
    <string name="favorite">Favorite</string>
    <string name="detail_movie">Detail Movie</string>

    <!-- Hint -->
    <string name="hint_added_to_favorite">Added To Favorite</string>
    <string name="hint_removed_from_favorite">Removed From Favorite</string>
    <string name="hint_no_favorite">No Favorite Movie(s) Found</string>

    <!-- Detail -->
    <string name="rating">Rating</string>
    <string name="duration">Duration</string>
    <string name="language">Language</string>
    <string name="genres">Genres</string>
    <string name="release_date">Release Date</string>
    <string name="overview">Overview</string>
</resources>
