<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MovieDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_margin">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_poster"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:elevation="@dimen/item_margin"
                app:civ_border_color="@color/colorSecondaryDark"
                app:civ_border_width="@dimen/small_margin"
                tools:src="@drawable/starwars" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:textAlignment="center"
                android:textColor="@color/colorSecondaryDark"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="Movie Title" />

            <TextView
                android:id="@+id/tv_tagline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                tools:text="Movie Tagline"
                android:textColor="@color/textPrimary"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            android:elevation="@dimen/small_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/textPrimary"
                        android:textSize="@dimen/font_huge"
                        android:textStyle="bold"
                        tools:text="9.8" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/colorSecondary"/>

                </LinearLayout>

                <View
                    android:layout_width="@dimen/tiny_margin"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:elevation="@dimen/small_margin"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_duration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/textPrimary"
                        android:textSize="@dimen/font_huge"
                        android:textStyle="bold"
                        tools:text="180" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/duration"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/colorSecondary"/>

                </LinearLayout>

                <View
                    android:layout_width="@dimen/tiny_margin"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:elevation="@dimen/small_margin" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_language"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/textPrimary"
                        android:textSize="@dimen/font_huge"
                        android:textStyle="bold"
                        tools:text="EN" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/language"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/colorSecondary"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/release_date"
                    android:textColor="@color/colorSecondary"
                    android:textSize="@dimen/font_big"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_release_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textPrimary"
                    tools:text="28-12-1996" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/overview"
                    android:textColor="@color/colorSecondary"
                    android:textSize="@dimen/font_big"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Movie Description"
                    android:textColor="@color/textPrimary"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>